Update from December 17, 2024

--- a/old/74857-h/74857-h.htm
+++ b/old/74857-h/74857-h.htm
@@ -128,7 +128,8 @@ padding-right: .5em;}
     </style>
 </head>
 <body>
-<div>*** START OF THE PROJECT GUTENBERG EBOOK 74857 ***</div>
+<div style='text-align:center'>*** START OF THE PROJECT GUTENBERG EBOOK 74857 ***</div>
+
 
 <p class="ph3">EMPTY CHURCHES</p>
 
@@ -435,7 +436,7 @@ means.”</p>
 <p>Only one fifth of the rural population
 goes to church.</p>
 
-<p>Two-fifths of the rural churches of
+<p>Two fifths of the rural churches of
 the country are standing still or losing
 ground.</p>
 
@@ -527,7 +528,7 @@ inverse ratio to the increase in churches.
 One out of every five is not a showing
 that would have brought joy to the
 Puritan Fathers. What is the reason
-<span class="pagenum" id="Page_13">[Pg 13]</span>for this precarious situation in the
+<span class="pagenum" id="Page_13">[Pg 13]</span>for, this precarious situation in the
 rural churches of our nation? Does it
 indicate that our country population
 is made up of a less God-fearing folk
@@ -548,7 +549,7 @@ For instance, there is the fact that during
 the past few years the number of
 tenant-farmers in the United States
 has steadily increased, until now
-thirty-eight per cent. of the farms are
+thirty eight per cent. of the farms are
 <span class="pagenum" id="Page_14">[Pg 14]</span>tenant operated, most often on the basis
 of the one-year lease. Any fact that
 tends to make the farmer more or less
@@ -1926,7 +1927,7 @@ is 13.7, while the percentage of
 tenants who are church members is
 12.4; where tenancy runs from 11 to 25
 per cent., the percentage of owners as
-church members is 26.8, while of tenants,
+church members, is 26.8, while of tenants,
 19.8; where tenancy runs from 26
 to 50 per cent., the percentage of
 owners is 48.2, while of tenants, 23.6;
@@ -2942,7 +2943,7 @@ to help.</p>
 prayer and mine, the sweetest thing we
 <span class="pagenum" id="Page_119">[Pg 119]</span>can give, is poisoned, and shot into a
 rural community, there to hurt—Well
-the words are not so much wanting
+the words, are not so much wanting
 to express my indignation and
 yours, as the mind fails to comprehend
 how such tactless blunders can happen.</p>
@@ -3612,7 +3613,7 @@ minds only in moments of exalted pitch
 will, by a natural process of elimination,
 soon reduce the church to a temperamental
 sect. No, the church is made
-up of all temperaments: the matter-of-fact,
+up of all temperaments the matter-of-fact,
 <span class="pagenum" id="Page_148">[Pg 148]</span>active, and practical; the poetic,
 sentimental, imaginative; the strenuous;
 the easy-going; the enthusiastic;
@@ -3714,7 +3715,7 @@ corrections below.</p>
 </div>
 </div>
 
-<div>*** END OF THE PROJECT GUTENBERG EBOOK 74857 ***</div>
+<div style='text-align:center'>*** END OF THE PROJECT GUTENBERG EBOOK 74857 ***</div>
 </body>
 </html>
 
